# lenia_ca

./: Cargo.toml  README.md
src/: fft.rs  growth_functions.rs  kernels.rs  lenias.rs  lib.rs
