[package]
name = "lenia_ca"
version = "0.1.1"
authors = ["Birdbrain"]
edition = "2021"
description = "A library for simulating the Lenia system of cellular automata."
license = "MIT"

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon"] }
rustfft = "6.1.0"
num-complex = "0.4.2"
png = "0.17.7"
rayon = "1.7.0"